2025-05-27 / naver 가입 처리

--- a/pet/src/main/resources/application.properties
+++ b/pet/src/main/resources/application.properties
@@ -65,8 +65,8 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute = id
 # ---------------------------------------------------
 # NAVER OAUTH
 # ---------------------------------------------------
-#spring.security.oauth2.client.registration.naver.client-id=
-#spring.security.oauth2.client.registration.naver.client-secret=
+#spring.security.oauth2.client.registration.naver.client-id=DkbWb1AdU_12WeWDOwzq
+#spring.security.oauth2.client.registration.naver.client-secret=HNGsRNZfOJ
 #spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8091/login/oauth2/code/naver
 #spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
 #spring.security.oauth2.client.registration.naver.client-name=naver
