--- a/pet/src/main/resources/application.properties
+++ b/pet/src/main/resources/application.properties
@@ -37,6 +37,7 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 #---------------------------------------
 # OAuth2 setting
