프로필 사진 추가, 예약페이지 마무리, 오너/시터 프로필 헤더 수정

--- a/pet/src/main/resources/application.properties
+++ b/pet/src/main/resources/application.properties
@@ -90,3 +90,9 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 #spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8091/login/oauth2/code/google
 #spring.security.oauth2.client.registration.google.scope=email,profile
 
+
+# ?? ??? ?? ??
+upload.path=C:/uploads
+
+
+
